--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,1 +1,15 @@
+<div class="abgm-wrap">
+  <div class="abgm-head">
+    <label class="abgm-toggle">
+      <input type="checkbox" id="abgm_enable">
+      <span>Enable</span>
+    </label>
+
+    <button class="abgm-btn" id="abgm_openSettings" type="button">Settings</button>
+  </div>
+
+  <div class="abgm-help">
+    프리셋 선택 &gt; BGM 추가 &gt; 각 BGM에 키워드 입력
+  </div>
+</div>
 
