--- a/templates/popup.html
+++ b/templates/popup.html
@@ -73,6 +73,10 @@
             <div class="menu_button" id="abgm_bgm_add" title="Add MP3">
               <i class="fa-solid fa-music"></i>
             </div>
+            <div class="menu_button" id="abgm_zip_add" title="Add ZIP">
+              <i class="fa-solid fa-file-zipper"></i>
+            </div>
+            <input id="abgm_zip_file" type="file" accept=".zip,application/zip" style="display:none;">
           </div>
         </div>
 
