--- a/templates/popup.html
+++ b/templates/popup.html
@@ -113,19 +113,18 @@
 
         <div class="abgm-tablewrap">
           <table class="abgm-table">
-            <thead>
+            
+<thead>
   <tr>
     <th class="abgm-col-check">
       <input type="checkbox" id="abgm_sel_all" title="Select all">
     </th>
-    <th style="width:26%;">File</th>
-    <th>Keywords</th>
-    <th style="width:86px;">Priority</th>
-    <th style="width:120px;">Vol</th>
-    <th style="width:90px;">Test</th>
-    <th style="width:56px;">Del</th>
+    <th>File</th>
+    <th style="width:92px;">Play</th>
+    <th style="width:64px;">More</th>
   </tr>
 </thead>
+
 
             <tbody id="abgm_bgm_tbody">
               <!-- rows -->
