--- a/templates/popup.html
+++ b/templates/popup.html
@@ -107,6 +107,12 @@
   </div>
   <small id="abgm_selected_count" style="opacity:.75;">0 selected</small>
 </div>
+          <div class="menu_button" id="abgm_expand_all" title="Expand all rows">
+  <i class="fa-solid fa-angles-down"></i>
+</div>
+<div class="menu_button" id="abgm_collapse_all" title="Collapse all rows">
+  <i class="fa-solid fa-angles-up"></i>
+</div>
 
           <input id="abgm_bgm_file" type="file" accept="audio/mpeg,audio/mp3" style="display:none;">
         </div>
